--- a/text.php.tmpl
+++ b/text.php.tmpl
@@ -29,18 +29,14 @@ if (\$count == 4){
     	<meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="Refresh" content="180">
-	#if $Extras.has_key('cwop')
-        <meta name="description" content="$station.location Weather Station ($Extras.cwop) - weather web site powered by WeeWX">
-        #else
         <meta name="description" content="$station.location Weather Station - weather web site powered by WeeWX">
-	#end if
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="profile" href="http://gmpg.org/xfn/11" />
 	#if $Extras.has_key('web_url')
 	<link rel="canonical" href="$Extras.web_url/summary.html"/>
 	#end if   
 <?php        
-        echo"<title>$station.location ($Extras.cwop) Climate Summary for \$title </title>";
+        echo"<title>$station.location Climate Summary for \$title </title>";
 ?>
         <!-- Open Graph -->
         <meta property="og:site_name" content="$station.location Summaries and Records" />
@@ -71,12 +67,10 @@ if (\$count == 4){
     <header>
             <div class="container-fix" >
                 <div class="h-left" >
-                <h1><i class="fa fa-cloud" ></i> $station.location </h1>
-                <p>$station.latitude[0]&deg; $station.latitude[1]' $station.latitude[2] | $station.longitude[0]&deg; $station.longitude[1]' $station.longitude[2] | $station.altitude | <a href="https://www.google.com/maps/?q=$station.latitude[0]&deg;%20$station.latitude[1]%20$station.latitude[2],$station.longitude[0]&deg;%20$station.longitude[1]%20$station.longitude[2]" target="_blank" ><i class="fa fa-map-marker" ></i> Show on map</a></p>
 <?php
           echo "<h2>Climate Summary \$title</h2>";
 ?>
-                <p><i class="fa fa-clock-o" ></i> $current.dateTime $current.dateTime.format("%Z")</p>
+                <p><i class="fa fa-clock-o" ></i> $current.dateTime.format("%b-%d-%Y %I:%M %p %Z")</p>
 		<p id="freshweather" class="m-orange"></p>
 		<script type="text/javascript">
                       window.onload = checkDiff("$current.dateTime ($current.dateTime.format('%Z'))");
