--- a/week.html.tmpl
+++ b/week.html.tmpl
@@ -44,10 +44,8 @@
         <header>
             <div class="container-fix" >
                 <div class="h-left" >
-                <h1><i class="fa fa-cloud" ></i> $station.location </h1>
-                <p>$station.latitude[0]&deg; $station.latitude[1]' $station.latitude[2] | $station.longitude[0]&deg; $station.longitude[1]' $station.longitude[2] | $station.altitude | <a href="https://www.google.com/maps/?q=$station.latitude[0]&deg;%20$station.latitude[1]%20$station.latitude[2],$station.longitude[0]&deg;%20$station.longitude[1]%20$station.longitude[2]" target="_blank" ><i class="fa fa-map-marker" ></i> Show on map</a></p>
                 <h2>Weekly Weather Summary</h2>
-                <p><i class="fa fa-clock-o" ></i> $current.dateTime $current.dateTime.format("%Z")</p>
+                <p><i class="fa fa-clock-o" ></i> $current.dateTime.format("%b-%d-%Y %I:%M %p %Z")</p>
 		<p id="freshweather" class="m-orange"></p>
                 <script type="text/javascript">
                       window.onload = checkDiff("$current.dateTime ($current.dateTime.format('%Z'))");
@@ -73,8 +71,8 @@
                         <li class="active" ><a href="week.html" >Week</a></li>
                         <li><a href="month.html" >Month</a></li>
                         <li><a href="year.html" >Year</a></li>
-			<li><a href="summary.html" >Summaries</a></li>
-			<li><a href="station.html" >Station</a></li>
+			<li><a href="summary.html" >Summary</a></li>
+			<li><a href="station.html" >Information</a></li>
                         <li><a href="RSS/weewx_rss.xml" ><i class="fa fa-rss" ></i></a></li>
                     </ul>
                 </nav>
