--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -76,7 +76,8 @@
 	   <div class="left" >
 
 		<div class="card" >
-                    <h1><i class="fa fa-server"></i> $station.location Status</h1>
+                    <h1><i class="fa fa-server"></i> $station.location Status
+		    <img src=https://travis-ci.org/moberlin8/Sofaskin-CW9009.svg?branch=master></h1>
 			
 		    <table>
 			<tr><td><b>WeeWX uptime:</b></td><td>$station.uptime</td></tr>
