Align Travis build image

--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -77,7 +77,7 @@
 
 		<div class="card" >
                     <h1><i class="fa fa-server"></i> $station.location Status
-		    <img src=https://travis-ci.org/moberlin8/Sofaskin-CW9009.svg?branch=master></h1>
+		    <img align="right" src=https://travis-ci.org/moberlin8/Sofaskin-CW9009.svg?branch=master></h1>
 			
 		    <table>
 			<tr><td><b>WeeWX uptime:</b></td><td>$station.uptime</td></tr>
