Fixed image align Travis Build

--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -85,7 +85,7 @@
                         <tr><td><b>Software:</b></td><td><a href="http://weewx.com/" target="_blank" >WeeWX v$station.version</a></td></tr>
 			<tr><td><b>Travis CI:</b></td>
 			  <td><a href="https://travis-ci.org/moberlin8/Sofaskin-CW9009/">
-			  <img align="right" src=https://travis-ci.org/moberlin8/Sofaskin-CW9009.svg?branch=master></a>
+			  <img src=https://travis-ci.org/moberlin8/Sofaskin-CW9009.svg?branch=master></a>
 			  </td></tr>
 		    </table>
 		</div>
