Updated sites notes

--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -106,6 +106,7 @@
                     <h1><i class="fa fa-commenting-o" ></i> $station.location Updates</h1>
 		    <p><i class="fa fa-angle-right">Dec-30-2017 This page is dedicated to my favorite <img src="https://png.icons8.com/nolan/20/ffffff/unicorn.png">
 		    who recommended I add tracking for the <b>ISS</b></i></p>
+		    <p><i class="fa fa-angle-right">Jan-2-2018 Updated to use Travis CI as a build platform. Not even close to working.</i></p>
 		</div>
 	   </div>
 
