--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -84,8 +84,8 @@
                         <tr><td><b>Hardware:</b></td><td>$station.hardware</td></tr>
                         <tr><td><b>Software:</b></td><td><a href="http://weewx.com/" target="_blank" >WeeWX v$station.version</a></td></tr>
 			<tr><td><b>Travis CI:</b></td>
-			  <td><a href="https://travis-ci.org/moberlin8/Sofaskin-CW9009/">
-			  <img src=https://travis-ci.org/moberlin8/Sofaskin-CW9009.svg?branch=master></a>
+			  <td><a href="https://travis-ci.org/moberlin8/OberlinTV/">
+			  <img src=https://api.travis-ci.org/moberlin8/OberlinTV.svg?branch=master></a>
 			  </td></tr>
 		    </table>
 		</div>
