--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -8,7 +8,7 @@
         <meta name="description" content="$station.location Weather Station ($Extras.cwop) - weather web site powered by WeeWX">
         #else
         <meta name="description" content="$station.location Weather Station - weather web site powered by WeeWX">
-	#end if
+	# **This should make it fail***end if
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="profile" href="http://gmpg.org/xfn/11" />
 	#if $Extras.has_key('web_url')
