--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -4,11 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="Refresh" content="180">
-	#if $Extras.has_key('cwop')
         <meta name="description" content="$station.location Weather Station ($Extras.cwop) - weather web site powered by WeeWX">
         #else
         <meta name="description" content="$station.location Weather Station - weather web site powered by WeeWX">
-	# **This should make it fail***end if
+	#end if
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="profile" href="http://gmpg.org/xfn/11" />
 	#if $Extras.has_key('web_url')
