Fixed syntax errors

--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -15,7 +15,7 @@
 	<link rel="canonical" href="$Extras.web_url"/>
 	#end if
         
-	<title>$XXXFAILXXXstation.location Current Weather Conditions</title>
+	<title>$station.location Current Weather Conditions</title>
         
         <!-- Open Graph -->
 	#if $Extras.has_key('cwop')
