--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -15,7 +15,7 @@
 	<link href="$Extras.web_url/station.html" itemprop="url"/>
 	#end if
         
-	<title itemprop="name">$XXXFAILXXX$station.location Information Page</title>
+	<title itemprop="name">$station.location Information Page</title>
         
         <!-- Open Graph -->
 	<meta property="og:site_name" content="$station.location Station" />
