Note re:site updated framwork.

--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -104,10 +104,11 @@
 
 		<div class="card" >
                     <h1><i class="fa fa-commenting-o" ></i> $station.location Updates</h1>
+		    <p><i class="fa fa-angle-right"> Jan-7-2018 New framework for validate and build site. <a href="https://travis-ci.org/moberlin8/Oberlin.TV/">Travis CI</a></i></p>
+		    <p><i class="fa fa-angle-right"> Jan-2-2018 Updated to use <em>Travis CI</em>
+		    as a build platform. Not even close to working.</i></p>
 		    <p><i class="fa fa-angle-right"> Dec-30-2017 This page is dedicated to my favorite <img src="https://png.icons8.com/nolan/20/ffffff/unicorn.png">
 		    who recommended I add tracking for the <b>ISS</b></i></p>
-		    <p><i class="fa fa-angle-right"> Jan-2-2018 Updated to use <a href="https://travis-ci.org/moberlin8/Sofaskin-CW9009/">Travis CI</a>
-		    as a build platform. Not even close to working.</i></p>
 		</div>
 	   </div>
 
