Change hardware type

--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -81,7 +81,7 @@
 		    <table>
 			<tr><td><b>WeeWX uptime:</b></td><td>$station.uptime</td></tr>
                         <tr><td><b>Server uptime:</b></td><td>$station.os_uptime</td></tr>
-                        <tr><td><b>Hardware:</b></td><td>$station.hardware</td></tr>
+                        <tr><td><b>Hardware:</b></td><td>Vantage Pro</td></tr>
                         <tr><td><b>Software:</b></td><td><a href="http://weewx.com/" target="_blank" >WeeWX v$station.version</a></td></tr>
 			<tr><td><b>Travis CI:</b></td>
 			  <td><a href="https://travis-ci.org/moberlin8/OberlinTV/">
