--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -104,6 +104,7 @@
 
 		<div class="card" >
                     <h1><i class="fa fa-commenting-o" ></i> $station.location Updates</h1>
+		    <p><i class="fa fa-angle-right"> Jan-16-2018 Clean up current condistion page.</i></p>
 		    <p><i class="fa fa-angle-right"> Jan-10-2018 <a href="http://darksitefinder.com/">Dark Site Finder </a>is a good website to find places for stargazing.</i></p>
 		    <p><i class="fa fa-angle-right"> Jan-7-2018 New framework for validate and build site. <a href="https://travis-ci.org">Travis CI</a></i></p>
 		    <p><i class="fa fa-angle-right"> Jan-2-2018 Updated to use <em>Travis CI</em>
