--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -92,9 +92,10 @@
 
                      <div class="card">
                      <h1><i class="fa fa-globe"></i> International Space Station<h1/>
-		     <center>
-                     <iframe src='https://spotthestation.nasa.gov/widget/widget.cfm?country=United_States&region=North_Carolina&city=Raleigh' width='311' height='450' frameborder='0' ></iframe>
-		    </center>
+                     <h3><a href="fa fa-globe">Spot the Station</a><h3/>
+            		     <center>
+                       <iframe src='https://spotthestation.nasa.gov/widget/widget.cfm?country=United_States&region=North_Carolina&city=Raleigh' width='311' height='450' frameborder='0' ></iframe>
+		                 </center>
                     </div>
 
 
@@ -103,8 +104,8 @@
 	   <div class="right" >
 
 		<div class="card" >
-                    <h1><i class="fa fa-commenting-o" ></i> $station.location Updates</h1>
-		    <p><i class="fa fa-angle-right"> Jan-16-2018 Clean up current condistion page.</i></p>
+        <h1><i class="fa fa-commenting-o" ></i> $station.location Updates</h1>
+		    <p><i class="fa fa-angle-right"> Jan-16-2018 Clean up current conditions page, updated headers.</i></p>
 		    <p><i class="fa fa-angle-right"> Jan-10-2018 <a href="http://darksitefinder.com/">Dark Site Finder </a>is a good website to find places for stargazing.</i></p>
 		    <p><i class="fa fa-angle-right"> Jan-7-2018 New framework for validate and build site. <a href="https://travis-ci.org">Travis CI</a></i></p>
 		    <p><i class="fa fa-angle-right"> Jan-2-2018 Updated to use <em>Travis CI</em>
