--- a/station.html.tmpl
+++ b/station.html.tmpl
@@ -92,7 +92,7 @@
 
                      <div class="card">
                      <h1><i class="fa fa-globe"></i> International Space Station<h1/>
-                     <h3><a href="fa fa-globe">Spot the Station</a><h3/>
+                     <h3><a href="https://spotthestation.nasa.gov/sightings/index.cfm">Spot the Station</a><h3/>
             		     <center>
                        <iframe src='https://spotthestation.nasa.gov/widget/widget.cfm?country=United_States&region=North_Carolina&city=Raleigh' width='311' height='450' frameborder='0' ></iframe>
 		                 </center>
