Change All Time Records card name

--- a/summary.html.tmpl
+++ b/summary.html.tmpl
@@ -75,7 +75,7 @@
 	    <div class="left" >
 
 		<div class="card" >
-                    <h1><i class="fa fa-bolt m-orange" ></i> All Time Records (Since Nov. 2007)</h1>
+                    <h1><i class="fa fa-bolt m-orange" ></i> All Time Records</h1>
                     <table class="tablespacer">
 			<tr><td colspan="3"><b>Outside Temperatures</b></td></tr>
 			<tr><td>Highest</td><td>$alltime.outTemp.max</td><td>$alltime.outTemp.maxtime</td></tr>
