Fixed tag mismatch.

--- a/RSS/weewx_rss.xml.tmpl
+++ b/RSS/weewx_rss.xml.tmpl
@@ -21,7 +21,7 @@
            <outside_temperature>$current.outTemp</outside_temperature>
            <barometer>$current.barometer</barometer>
            <wind_speed>$current.windSpeed</wind_speed>
-           <wind_directtion>$current.windDir</wind_direction>
+           <wind_direction>$current.windDir</wind_direction>
            <rain_rate>$current.rainRate</rain_rate>
            <inside_temperature>$current.inTemp</inside_temperature>
          </conditions>
